<resources>
    <string name="app_name">Lemon App</string>
    <string name="nome">Lemon App</string>
    <string name="intro">Seja bem-vindo ao Lemon App!</string>
    <string name="btnLogin">Login</string>
    <string name="btnCadastro">Cadastro</string>
    <string name="btnAdmin">Entrar como administrador</string>
    <string name="btnColaborador">Entrar como colaborador</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="btnFazerCadastro">Não tem uma conta? Faça o cadastro</string>
    <string name="btnBomHoje">O que você fez de bom hoje?</string>
    <string name="acao1">Cultivei horta doméstica</string>
    <string name="acao2">Separei lixo para reciclagem</string>
    <string name="acao3">Tive hábitos alimentares saudáveis</string>
    <string name="acao4">Pratiquei atividades fisícas</string>
    <string name="acao5">Participei de projetos voluntários</string>
    <string name="acao6">Utilizei alternativas de transporte</string>
    <string name="btnInicio">Ações</string>
    <string name="btnBonificacao">Prêmios</string>
    <string name="btnPontuacao">Pontuação</string>
    <string name="btnDicas">Dicas</string>
    <string name="btnEntrar">Entrar</string>
    <string name="pontos">+20</string>
    <string name="introNome">Olá, nome!</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dicas_intro">Veja algumas dicas para você completar suas ações:</string>
    <string name="ecopontos">Ecopontos</string>
    <string name="mapa_ecopontos">Ver Ecopontos</string>
    <string name="voluntario">Doe para uma ONG</string>
    <string name="ongs">Ver ONG`S</string>
    <string name="cultivo">Dicas de cultivo</string>
    <string name="btnCultivo">Ver dicas</string>
    <string name="receitas">Receitas fit</string>
    <string name="btnReceitas">Ver receitas</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>