<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeEscuro"
    android:backgroundTint="@color/verdeEscuro">

    <LinearLayout
        android:id="@+id/barraOpcoesIcons"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="-20dp"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/barraOpcoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnInicioIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/transparente"
            app:layout_constraintBottom_toTopOf="@+id/barraOpcoes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barraOpcoes"
            app:srcCompat="@drawable/ic_iconacoesbranco" />


        <ImageButton
            android:id="@+id/btnPremiosIcon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/transparente"
            app:layout_constraintBottom_toTopOf="@+id/barraOpcoes"
            app:layout_constraintStart_toEndOf="@+id/imageButton3"
            app:layout_constraintTop_toTopOf="@+id/barraOpcoes"
            app:srcCompat="@drawable/ic_iconpremios" />

        <ImageButton
            android:id="@+id/btnPontuacaoIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/transparente"
            app:layout_constraintBottom_toTopOf="@+id/barraOpcoes"
            app:layout_constraintEnd_toEndOf="@+id/barraOpcoes"
            app:layout_constraintStart_toEndOf="@+id/imageButton5"
            app:layout_constraintTop_toTopOf="@+id/barraOpcoes"
            app:layout_constraintVertical_bias="0.779"
            app:srcCompat="@drawable/ic_iconpontos" />

        <ImageButton
            android:id="@+id/btnDicasIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/transparente"
            app:layout_constraintBottom_toTopOf="@+id/barraOpcoes"
            app:layout_constraintEnd_toEndOf="@+id/barraOpcoes"
            app:layout_constraintStart_toEndOf="@+id/imageButton4"
            app:layout_constraintTop_toTopOf="@+id/barraOpcoes"
            app:srcCompat="@drawable/ic_icondicasverde" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/barraOpcoes"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/btnInicio"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparente"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:text="@string/btnInicio"
            android:textSize="9sp" />

        <Button
            android:id="@+id/btnBonificacao"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparente"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="0dp"
            android:paddingEnd="6dp"
            android:text="@string/btnBonificacao"
            android:textSize="9sp" />

        <Button
            android:id="@+id/btnPontuacao"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparente"
            android:paddingLeft="5dp"
            android:paddingTop="0dp"
            android:paddingRight="0dp"
            android:text="@string/btnPontuacao"
            android:textSize="9sp" />

        <Button
            android:id="@+id/btnDicas"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparente"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:text="@string/btnDicas"
            android:textColor="@color/verdeClaro"
            android:textSize="9sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iconLogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/icon_logo_app_foreground" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_iconbtnuser" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/backgroundprincipal"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textEcopontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/ecopontos"
            android:textColor="@color/verdeEscuroLetra"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMapaEcopontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdeEscuro"
            android:text="@string/mapa_ecopontos"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textEcopontos"
            app:layout_constraintStart_toStartOf="@+id/textEcopontos"
            app:layout_constraintTop_toBottomOf="@+id/textEcopontos" />

        <ImageButton
            android:id="@+id/iconReciclagem"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@color/transparente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_iconrecycle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:text="@string/dicas_intro"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/iconLogo"
        app:layout_constraintTop_toBottomOf="@+id/iconLogo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/backgroundprincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ImageView
            android:id="@+id/iconHorta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_iconplant" />


        <TextView
            android:id="@+id/textCultivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/cultivo"
            android:textColor="@color/verdeEscuroLetra"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDicasCultivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdeEscuro"
            android:text="@string/btnCultivo"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textCultivo"
            app:layout_constraintStart_toStartOf="@+id/textCultivo"
            app:layout_constraintTop_toBottomOf="@+id/textCultivo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/backgroundprincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <TextView
            android:id="@+id/textOng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/voluntario"
            android:textColor="@color/verdeEscuroLetra"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdeEscuro"
            android:text="@string/ongs"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textOng"
            app:layout_constraintStart_toStartOf="@+id/textOng"
            app:layout_constraintTop_toBottomOf="@+id/textOng" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@color/transparente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_coracaovermelho" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>